# audio-plugins

./: .gitmodules  README.md
KorgFilter/: CMakeLists.txt  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
cdsp/: CMakeLists.txt  CustomKnob.cpp  CustomKnob.hpp  cdsp.h  common.h
cdsp/cdsp/: consts.h  filters.cpp  filters.hpp
cui/: cui.cpp  cui.h
delrus/: .gitignore  CMakeLists.txt  delrus.jucer  readme.md
delrus/Source/: CustomKnob.cpp  CustomKnob.h  DelrusLookAndFeel.cpp  DelrusLookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
